[package]
name = "pool_party_rs"
version = "0.1.0"
edition = "2021"
# author: @teach2breach

[dependencies]
winapi = { version = "0.3", features = ["processthreadsapi", "memoryapi", "handleapi", "threadpoolapiset"] }
ntapi = "0.4.1"

[profile.release]
opt-level = "z"     # Optimize for size.
lto = true          # Enable Link Time Optimization
codegen-units = 1   # Reduce number of codegen units to increase optimizations.
panic = "abort"     # Abort on panic
strip = true        # Automatically strip symbols from the binary.